[project]
name = "nuv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "websocket-client>=1.9.0",
    "pycryptodome>=3.20.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]